--- a/kernel-software/Makefile
+++ b/kernel-software/Makefile
@@ -7,16 +7,21 @@ else
 
 # We are being compiled as a module: use the Kernel build system
 
-	KERNEL_SOURCE := /usr/src/linux-headers-$(shell uname -r)
-        PWD := $(shell pwd)
+KERNEL_SOURCE := /usr/src/linux-headers-$(shell uname -r)
+PWD := $(shell pwd)
+
+CC = gcc
+CFLAGS = -W -Wall
 
 default: module driver_test
 
-module:
+module: ../software-testbench/Parameters.h
 	${MAKE} -C ${KERNEL_SOURCE} SUBDIRS=${PWD} modules
+
+driver_test.o: ../software-testbench/Parameters.h
 
 clean:
 	${MAKE} -C ${KERNEL_SOURCE} SUBDIRS=${PWD} clean
-	${RM} driver_test
+	${RM} driver_test driver_test.o
 
 endif 
